Closed
Bug 819714
Opened 13 years ago
Closed 13 years ago
Take away the nice things from desktop builds
Categories
(Firefox OS Graveyard :: General, defect)
Firefox OS Graveyard
General
Tracking
(blocking-basecamp:+, firefox19 fixed, firefox20 fixed, b2g18 fixed)
RESOLVED
FIXED
| blocking-basecamp | + |
People
(Reporter: cjones, Assigned: cjones)
References
Details
Attachments
(2 files)
|
3.22 KB,
patch
|
vingtetun
:
review+
|
Details | Diff | Splinter Review |
|
6.41 KB,
text/plain
|
Details |
We've been trying to keep desktop on life support while it uses out-of-process content, omtc, and GPU compositing on some platforms where that's not officially supported. Time to pull the plug.
| Assignee | ||
Comment 1•13 years ago
|
||
Assignee: nobody → jones.chris.g
Attachment #690139 -
Flags: review?(21)
| Assignee | ||
Comment 2•13 years ago
|
||
Additional notes
- platform folks doing work that depends on nice things should know how to turn these things back on as needed
- I ran into the "Mozilla black screen of death" when testing this patch with bug 819716. Probably an existing race condition that we happen to hit.
Comment 3•13 years ago
|
||
I applied to the patch, works great for me, first time I've seen anything but a white screen in over a month.
Comment 4•13 years ago
|
||
Comment on attachment 690139 [details] [diff] [review]
Take away the nice things from desktop b2g builds
Review of attachment 690139 [details] [diff] [review]:
-----------------------------------------------------------------
sniff
Attachment #690139 -
Flags: review?(21) → review+
| Assignee | ||
Comment 6•13 years ago
|
||
Comment 7•13 years ago
|
||
Chris, late last night I did a mozilla-beta build (rev 3fcae8234ba9 + this patch) and b2g-desktop still launches into "mozilla" and then a blank screen, on Ubuntu-12.04 in VMWare 9.
Comment 8•13 years ago
|
||
That was with gaia revision c2c9bc9875e3a85b860219f752df8894277fc938.
Comment 9•13 years ago
|
||
| Assignee | ||
Comment 10•13 years ago
|
||
Suspicious-looking things here
JavaScript error: app://system.gaiamobile.org/js/bluetooth.js, line 36: bluetooth is undefined
JavaScript error: app://system.gaiamobile.org/js/wifi.js, line 52: wifiManager is undefined
This might be a recent regression that's breaking the system app on startup.
XXX FIXME : Got a mozContentEvent: system-message-listener-ready
************************************************************
* Call to xpconnect wrapped JSObject produced this error: *
[Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIProperties.get]" nsresult: "0x80004005 (NS_ERROR_FAILURE)" location: "JS frame :: resource://gre/modules/FileUtils.jsm :: FileUtils_getDir :: line 63" data: no]
************************************************************
I have no idea what this error is.
| Assignee | ||
Comment 11•13 years ago
|
||
I have a working local build. In it, I see the first set of errors but not the second. So that seems likely to be the problem.
Comment 12•13 years ago
|
||
bluetooth might be undefined if you're not building with --enable-b2g-bt.
Comment 13•13 years ago
|
||
(In reply to Kyle Machulis [:kmachulis] [:qdot] from comment #12)
> bluetooth might be undefined if you're not building with --enable-b2g-bt.
I think one cannot build b2g-desktop with --enable-b2g-bt:
/home/hacker/b2g-desktop/src/dom/bluetooth/BluetoothUnixSocketConnector.cpp:30:33: fatal error: bluetooth/bluetooth.h: No such file or directory
Comment 14•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Comment 15•13 years ago
|
||
(In reply to Brian Smith (:bsmith) from comment #13)
> (In reply to Kyle Machulis [:kmachulis] [:qdot] from comment #12)
> > bluetooth might be undefined if you're not building with --enable-b2g-bt.
>
> I think one cannot build b2g-desktop with --enable-b2g-bt:
>
> /home/hacker/b2g-desktop/src/dom/bluetooth/BluetoothUnixSocketConnector.cpp:
> 30:33: fatal error: bluetooth/bluetooth.h: No such file or directory
b2g-bluetooth was mostly developed on b2g-desktop, since android and linux both used bluez/dbus through android 4.1 (Android now has its own stack :| ). You just need the libbluetooth-dev package. I'll try to get that added to the wiki.
Comment 16•13 years ago
|
||
Comment on attachment 690139 [details] [diff] [review]
Take away the nice things from desktop b2g builds
[Approval Request Comment]
Bug caused by (feature/regressing bug #): multiple bugs
User impact if declined: Many users won't be able to run the B2G desktop builds that most closely resemble the first Firefox OS release, including localizers localizing B2G and app developers developing apps for it.
Testing completed: Various folks have tested this patch (and similar ones) and reported success running B2G Desktop with it.
Risk to taking this patch (and alternatives if risky): This only affects desktop builds, which are already pretty broken (hence the patch), so it isn't very risky.
String or UUID changes made by this patch: None.
Attachment #690139 -
Flags: approval-mozilla-b2g18?
Attachment #690139 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 17•13 years ago
|
||
Comment on attachment 690139 [details] [diff] [review]
Take away the nice things from desktop b2g builds
b2g-only bb+ bug, no explicit approval needed (yet).
Attachment #690139 -
Flags: approval-mozilla-b2g18?
Attachment #690139 -
Flags: approval-mozilla-aurora?
Updated•13 years ago
|
Keywords: checkin-needed
Comment 18•13 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/77b1dc0a13f8
https://hg.mozilla.org/releases/mozilla-b2g18/rev/17041e392ea6
status-b2g18:
--- → fixed
status-firefox19:
--- → fixed
status-firefox20:
--- → fixed
Keywords: checkin-needed
You need to log in
before you can comment on or make changes to this bug.
Description
•