Bug 819714: Take away the nice things from desktop b2g builds. r=vingtetun